--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "1e03-pycapa",
+  "name": "loncapa-solver",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^12.34.0",
     "next": "^15.1.0",
     "pdf-parse": "^1.1.4",
     "react": "^19.0.0",
@@ -19,6 +20,9 @@
     "@types/pdf-parse": "^1.1.5",
     "@types/react": "^19.0.2",
     "@types/react-dom": "^19.0.2",
+    "autoprefixer": "^10.4.24",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5.7.2"
   }
 }
